chore: use existing findKeysByPrefix